# RealSenseToPC

./: .project  CMakeLists.txt  README.RealSenseToPC  README.md  RTC.xml  RealSenseToPC.bat  RealSenseToPC.conf  RealSenseToPCComp.bat  rtc.conf
cmake/: realsensetopc-config.cmake.in  wix.xsl.in
doc/: conf.py.in
doc/content/: index.txt  index_j.txt
idl/: CMakeLists.txt
include/: CMakeLists.txt
include/RealSenseToPC/: CMakeLists.txt  RealSenseToPC.h
rs/include/: real_sense_grabber.h
rs/include/real_sense/: real_sense_device_manager.h
rs/src/: real_sense_grabber.cpp
src/: CMakeLists.txt  RealSenseToPC.cpp  RealSenseToPCComp.cpp
